--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "^14.0.8",
     "expo-web-browser": "~15.0.8",
     "i18next": "^25.5.3",
     "intl-pluralrules": "^2.0.1",
